--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^8.2.0"
+  },
+  "devDependencies": {
+    "serverless-plugin-common-excludes": "^3.0.1",
+    "serverless-prune-plugin": "^1.4.4"
   }
 }
